# saola

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: example.py
src/saola/: __init__.py  base_convo.py  console.py  convo.py  default_loop.py  demo_loop.py  doc.py  interface.py  model.py  ui.py  utils.py
src/saola/demo_loop/: __init__.py  __main__.py
src/saola/start/: __init__.py  __main__.py
