[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "saola"
version = "0.1.0"
description = "A simple framework for building powerful AI assistants upon existing LLM-based chat APIs"
authors = ["Justo Rodriguez", "Adolfo Rodriguez"]
packages = [
    { include = "saola", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.4.2"
openai = "^1.3.5"

[[tool.poetry.source]]
name = "legacy"
url = "https://pypi.org/simple"
secondary = true